# geoh5-bridge

./: OMF_ORIGINAL_VS_MIRA.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/geoh5_bridge/: __init__.py  grid3d.py  omf_bridge.py  omf_geoh5_bridge.py  pyvista_bridge.py  raster.py  utils.py  vector.py
tests/: test_grid3d.py  test_omf_bridge.py  test_omf_geoh5_bridge.py  test_pyvista_bridge.py  test_raster.py  test_readme_examples.py  test_vector.py
