[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "geoh5-bridge"
version = "0.1.0"
description = "Convert pydata formats (rioxarray, GeoDataFrames, xarray/NetCDF) to geoh5"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "geoh5-bridge contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geoh5py>=0.9.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
raster = [
    "rioxarray>=0.15",
    "xarray>=2023.1",
    "rasterio>=1.3",
]
vector = [
    "geopandas>=0.14",
]
grid3d = [
    "xarray>=2023.1",
    "netcdf4>=1.6",
]
pyvista = [
    "pyvista>=0.38",
]
all = [
    "geoh5-bridge[raster,vector,grid3d,pyvista]",
]
dev = [
    "geoh5-bridge[all]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/RichardScottOZ/geoh5-bridge"
Repository = "https://github.com/RichardScottOZ/geoh5-bridge"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
